--- a/app/src/main/res/layout/content_route_details_stop.xml
+++ b/app/src/main/res/layout/content_route_details_stop.xml
@@ -83,6 +83,7 @@
                 android:layout_marginStart="8dp"
                 android:gravity="center_vertical"
                 android:includeFontPadding="false"
+                android:textColor="@color/common_text_primary"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
