--- a/app/src/main/res/layout/item_route_list.xml
+++ b/app/src/main/res/layout/item_route_list.xml
@@ -80,7 +80,7 @@
                     app:constraint_referenced_ids="routeOrigToTv,routeOrigFromTv" />
 
                 <TextView
-                    android:id="@+id/routeOrigTv"
+                    android:id="@+id/routeDestTv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
@@ -93,17 +93,16 @@
                     tools:text="@string/add_card_route_text" />
 
                 <TextView
-                    android:id="@+id/routeDestTv"
+                    android:id="@+id/routeOrigTv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:maxLines="1"
+                    android:gravity="center_vertical"
                     android:textColor="@color/common_text_secondary"
                     android:textSize="12sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/barrier"
-                    app:layout_constraintTop_toBottomOf="@id/routeOrigTv"
+                    app:layout_constraintTop_toBottomOf="@id/routeDestTv"
                     tools:text="@string/add_card_route_text" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
