--- a/app/src/main/res/layout/content_route_details_stop.xml
+++ b/app/src/main/res/layout/content_route_details_stop.xml
@@ -78,8 +78,8 @@
 
             <TextView
                 android:id="@+id/stopNameTv"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_width="344dp"
+                android:layout_height="21dp"
                 android:layout_marginStart="8dp"
                 android:gravity="center_vertical"
                 android:includeFontPadding="false"
