--- a/app/src/main/res/layout/content_eta_classic.xml
+++ b/app/src/main/res/layout/content_eta_classic.xml
@@ -44,6 +44,7 @@
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:text="@string/demo_card_route_desc_classic"
+                android:textColor="@color/common_text_primary"
                 android:textSize="@dimen/eta_classic_desc_name"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -58,6 +59,7 @@
                 android:gravity="center_vertical"
                 android:maxLines="2"
                 android:text="@string/demo_card_stop_name"
+                android:textColor="@color/common_text_primary"
                 android:textSize="@dimen/eta_classic_stop_name"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@id/routeDirectionTv"
