--- a/app/src/main/res/xml/pref_settings.xml
+++ b/app/src/main/res/xml/pref_settings.xml
@@ -53,6 +53,11 @@
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/settings_category_debug_title">
         <Preference
+            android:icon="@drawable/ic_settings_version_24"
+            android:key="pref_settings_report"
+            android:title="@string/title_settings_report" />
+
+        <Preference
             android:icon="@drawable/ic_settings_reset_24"
             android:key="pref_settings_reset"
             android:title="@string/title_settings_reset" />
