--- a/app/src/main/res/layout/item_route_list.xml
+++ b/app/src/main/res/layout/item_route_list.xml
@@ -22,10 +22,8 @@
         android:id="@+id/routeInfoCl"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingStart="0dp"
-        android:paddingTop="4dp"
-        android:paddingEnd="8dp"
-        android:paddingBottom="4dp"
+        android:paddingHorizontal="@dimen/item_route_list_padding"
+        android:paddingVertical="@dimen/item_route_list_padding"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/routeNumberContainer"
@@ -55,7 +53,7 @@
                     android:gravity="center_vertical"
                     android:text="@string/add_card_route_to_text"
                     android:textColor="@color/common_text_primary"
-                    android:textSize="16sp"
+                    android:textSize="@dimen/item_route_list_desc_name"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -67,8 +65,8 @@
                     android:gravity="center_vertical"
                     android:text="@string/add_card_route_from_text"
                     android:textColor="@color/common_text_secondary"
-                    android:textSize="12sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:textSize="@dimen/item_route_list_orig_name"
+                    app:layout_constraintTop_toTopOf="@id/routeOrigTv"
                     app:layout_constraintStart_toStartOf="parent" />
 
                 <androidx.constraintlayout.widget.Barrier
@@ -85,7 +83,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:textColor="@color/common_text_primary"
-                    android:textSize="16sp"
+                    android:textSize="@dimen/item_route_list_desc_name"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/barrier"
@@ -98,7 +96,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:textColor="@color/common_text_secondary"
-                    android:textSize="12sp"
+                    android:textSize="@dimen/item_route_list_orig_name"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/barrier"
