--- a/app/src/main/res/xml/pref_settings.xml
+++ b/app/src/main/res/xml/pref_settings.xml
@@ -53,7 +53,7 @@
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/settings_category_debug_title">
         <Preference
-            android:icon="@drawable/ic_settings_version_24"
+            android:icon="@drawable/ic_feedback_24"
             android:key="pref_settings_report"
             android:title="@string/title_settings_report" />
 
