--- a/app/src/main/res/layout/item_bottom_sheet_stop.xml
+++ b/app/src/main/res/layout/item_bottom_sheet_stop.xml
@@ -42,6 +42,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
+                android:textColor="@color/common_text_primary"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
