fix: add bookmark filter and update color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -62,11 +62,11 @@
     <!-- common -->
     <color name="white">@color/md_white_1000</color>
     <color name="brand_color_kmb">#D32F2F</color>
-    <color name="brand_color_ctb">#FBC02D</color>
+    <color name="brand_color_ctb">#F47920</color>
     <color name="brand_color_nwfb">#F47920</color>
     <color name="brand_color_gmb">#2E7D32</color>
     <color name="brand_color_mtr">#00234F</color>
-    <color name="brand_color_lrt">#CD9700</color>
+    <color name="brand_color_lrt">#997000</color>
     <color name="brand_color_nlb">#149425</color>
     <color name="eta_card_bg_selected">#11FFFFFF</color>
 
